--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,80 +1,61 @@
-name: Build and Deploy to Netlify
+name: Deploy to GitHub Pages
 
 on:
   push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+    branches: [main]
+  workflow_dispatch:
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: pages
+  cancel-in-progress: false
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    
-    permissions:
-      contents: read
-      deployments: write
-
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
 
       - name: Setup Bun
-        uses: oven-sh/setup-bun@v1
+        uses: oven-sh/setup-bun@v2
         with:
           bun-version: latest
 
       - name: Install dependencies
         run: bun install --frozen-lockfile
 
-      - name: Run Type Check
+      - name: Type check
         run: bun run type-check
 
-      - name: Run ESLint
+      - name: Lint
         run: bun run lint
 
-      - name: Run Tests
+      - name: Test
         run: bun run test
 
-      - name: Build production
+      - name: Build
         run: bun run build
-        env:
-          NODE_ENV: production
 
-      - name: Deploy to Netlify (Production)
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-        uses: nwtgck/actions-netlify@v2.1
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          publish-dir: './dist'
-          production-branch: main
-          production-deploy: true
-          enable-pull-request-comment: true
-          enable-commit-comment: true
-          netlify-config-path: './netlify.toml'
-        env:
-          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-        timeout-minutes: 5
+          path: dist
 
-      - name: Deploy to Netlify (Preview)
-        if: github.event_name == 'pull_request'
-        uses: nwtgck/actions-netlify@v2.1
-        with:
-          publish-dir: './dist'
-          production-branch: main
-          enable-pull-request-comment: true
-          enable-commit-comment: false
-          netlify-config-path: './netlify.toml'
-        env:
-          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-        timeout-minutes: 5
-
-      - name: Success notification
-        if: success()
-        run: echo "✅ Deployment successful!"
-
-      - name: Failure notification
-        if: failure()
-        run: echo "❌ Deployment failed - check logs above"
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
